# csum

./: CMakeLists.txt  README.md
cmake/: config.h.in
include/: csum.h
src/: ckfile.c  crc-ccitt.c  crc-ccittf.c  crc-itut.c  crc-rocksoft.c  crc-t10dif.c  crc16.c  crc32.c  crc4.c  crc64.c  crc7.c  crc8.c  linear.c  main.c
